# cancer-ai-usecase

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: aug_profiles.yaml  base.yaml  model_presets.yaml
data/manifests/: test_manifest.csv  train_manifest.csv
notebooks/: experiments_melanoma.ipynb
results/: eda_report.json
results/metrics/: dataset_summary.json  eda_channel_stats.json
results/preproc/rgb_base/external_val/: run_meta.json
results/preproc/rgb_base/test/: run_meta.json
results/preproc/rgb_base/train/: run_meta.json
results/preproc/rgb_h/external_val/: run_meta.json
results/preproc/rgb_h/test/: run_meta.json
results/preproc/rgb_h/train/: run_meta.json
results/preproc/rgb_s/external_val/: run_meta.json
results/preproc/rgb_s/test/: run_meta.json
results/preproc/rgb_s/train/: run_meta.json
results/runs/20251010-014526_exp-114dbe/: cfg.json  notes.txt
scripts/: check_format.ps1  fix_format.ps1  run_tests.ps1
src/dataio/: manifests.py
src/models/: cnn_baseline.py
src/preproc/: aug.py  colors.py  hair.py  pipeline.py  segment.py  utils_io.py  vignette.py
src/train/: metrics.py  train_run.py
src/utils/: config.py  reproducibility.py
streamlit_app/: App.py
streamlit_app/pages/: 1_Features.py  2_GradCAM.py  3_DifyChat.py  4_CNN_Explained.py
streamlit_app/src/: features.py  infer_preproc.py  preproc_streamlit.py  preproc_utils.py
streamlit_app/static/: style.css
streamlit_app/templates/: footer.html  header.html
tests/: smoke_gpu_pt.py  smoke_gpu_tf.py  test_gpu_pytorch.py  test_gpu_tensorflow.py
